add Tags to docs
